// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploader styled components afterFileDrop: StyledContentMessage has expected styles when after files are dropped 1`] = `
Object {
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components afterFileDrop: StyledErrorMessage has expected styles when after files are dropped 1`] = `
Object {
  "color": "$theme.colors.negative",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components afterFileDrop: StyledFileDragAndDrop has expected styles when after files are dropped 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.fileUploaderBackgroundColor",
  "borderColor": "$theme.colors.fileUploaderBorderColorDefault",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "none",
  "borderWidth": "$theme.sizing.scale0",
  "boxSizing": "border-box",
  "display": "flex",
  "flexDirection": "column",
  "outline": null,
  "paddingBottom": "$theme.sizing.scale900",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale900",
  "width": "100%",
}
`;

exports[`FileUploader styled components afterFileDrop: StyledHiddenInput has expected styles when after files are dropped 1`] = `Object {}`;

exports[`FileUploader styled components afterFileDrop: StyledRoot has expected styles when after files are dropped 1`] = `
Object {
  "color": "$theme.colors.fileUploaderMessageColor",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components default properties: StyledContentMessage has expected default styles 1`] = `
Object {
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components default properties: StyledErrorMessage has expected default styles 1`] = `
Object {
  "color": "$theme.colors.negative",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components default properties: StyledFileDragAndDrop has expected default styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.fileUploaderBackgroundColor",
  "borderColor": "$theme.colors.fileUploaderBorderColorDefault",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "dashed",
  "borderWidth": "$theme.sizing.scale0",
  "boxSizing": "border-box",
  "display": "flex",
  "flexDirection": "column",
  "outline": null,
  "paddingBottom": "$theme.sizing.scale900",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale900",
  "width": "100%",
}
`;

exports[`FileUploader styled components default properties: StyledHiddenInput has expected default styles 1`] = `Object {}`;

exports[`FileUploader styled components default properties: StyledRoot has expected default styles 1`] = `
Object {
  "color": "$theme.colors.fileUploaderMessageColor",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components disabled: StyledContentMessage has expected styles when disabled 1`] = `
Object {
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components disabled: StyledErrorMessage has expected styles when disabled 1`] = `
Object {
  "color": "$theme.colors.negative",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components disabled: StyledFileDragAndDrop has expected styles when disabled 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.fileUploaderBackgroundColor",
  "borderColor": "$theme.colors.fileUploaderBorderColorDefault",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "dashed",
  "borderWidth": "$theme.sizing.scale0",
  "boxSizing": "border-box",
  "display": "flex",
  "flexDirection": "column",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale900",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale900",
  "width": "100%",
}
`;

exports[`FileUploader styled components disabled: StyledHiddenInput has expected styles when disabled 1`] = `Object {}`;

exports[`FileUploader styled components disabled: StyledRoot has expected styles when disabled 1`] = `
Object {
  "color": "$theme.colors.fileUploaderMessageColor",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag accept: StyledContentMessage has expected styles when drag accept 1`] = `
Object {
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag accept: StyledErrorMessage has expected styles when drag accept 1`] = `
Object {
  "color": "$theme.colors.negative",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag accept: StyledFileDragAndDrop has expected styles when drag accept 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.fileUploaderBackgroundColor",
  "borderColor": "$theme.colors.fileUploaderBorderColorDefault",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "dashed",
  "borderWidth": "$theme.sizing.scale0",
  "boxSizing": "border-box",
  "display": "flex",
  "flexDirection": "column",
  "outline": null,
  "paddingBottom": "$theme.sizing.scale900",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale900",
  "width": "100%",
}
`;

exports[`FileUploader styled components drag accept: StyledHiddenInput has expected styles when drag accept 1`] = `Object {}`;

exports[`FileUploader styled components drag accept: StyledRoot has expected styles when drag accept 1`] = `
Object {
  "color": "$theme.colors.fileUploaderMessageColor",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag active: StyledContentMessage has expected styles when drag active 1`] = `
Object {
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag active: StyledErrorMessage has expected styles when drag active 1`] = `
Object {
  "color": "$theme.colors.negative",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag active: StyledFileDragAndDrop has expected styles when drag active 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.fileUploaderBackgroundColorActive",
  "borderColor": "$theme.colors.fileUploaderBorderColorActive",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "dashed",
  "borderWidth": "$theme.sizing.scale0",
  "boxSizing": "border-box",
  "display": "flex",
  "flexDirection": "column",
  "outline": null,
  "paddingBottom": "$theme.sizing.scale900",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale900",
  "width": "100%",
}
`;

exports[`FileUploader styled components drag active: StyledHiddenInput has expected styles when drag active 1`] = `Object {}`;

exports[`FileUploader styled components drag active: StyledRoot has expected styles when drag active 1`] = `
Object {
  "color": "$theme.colors.fileUploaderMessageColor",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag reject: StyledContentMessage has expected styles when drag reject 1`] = `
Object {
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag reject: StyledErrorMessage has expected styles when drag reject 1`] = `
Object {
  "color": "$theme.colors.negative",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components drag reject: StyledFileDragAndDrop has expected styles when drag reject 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.fileUploaderBackgroundColor",
  "borderColor": "$theme.colors.fileUploaderBorderColorDefault",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "dashed",
  "borderWidth": "$theme.sizing.scale0",
  "boxSizing": "border-box",
  "display": "flex",
  "flexDirection": "column",
  "outline": null,
  "paddingBottom": "$theme.sizing.scale900",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale900",
  "width": "100%",
}
`;

exports[`FileUploader styled components drag reject: StyledHiddenInput has expected styles when drag reject 1`] = `Object {}`;

exports[`FileUploader styled components drag reject: StyledRoot has expected styles when drag reject 1`] = `
Object {
  "color": "$theme.colors.fileUploaderMessageColor",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components focused: StyledContentMessage has expected styles when focused 1`] = `
Object {
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components focused: StyledErrorMessage has expected styles when focused 1`] = `
Object {
  "color": "$theme.colors.negative",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`FileUploader styled components focused: StyledFileDragAndDrop has expected styles when focused 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.fileUploaderBackgroundColor",
  "borderColor": "$theme.colors.fileUploaderBorderColorDefault",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "dashed",
  "borderWidth": "$theme.sizing.scale0",
  "boxSizing": "border-box",
  "display": "flex",
  "flexDirection": "column",
  "outline": null,
  "paddingBottom": "$theme.sizing.scale900",
  "paddingLeft": "$theme.sizing.scale800",
  "paddingRight": "$theme.sizing.scale800",
  "paddingTop": "$theme.sizing.scale900",
  "width": "100%",
}
`;

exports[`FileUploader styled components focused: StyledHiddenInput has expected styles when focused 1`] = `Object {}`;

exports[`FileUploader styled components focused: StyledRoot has expected styles when focused 1`] = `
Object {
  "color": "$theme.colors.fileUploaderMessageColor",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;
